--- a/biblio.bib
+++ b/biblio.bib
@@ -50,9 +50,6 @@
    year = {2010},
 }
 
-
-
-
 @article{Patel2003,
    abstract = {Objective: To determine whether oral albuterol is effective in reducing symptomatology of acute viral bronchiolitis in infants with mild-to-moderate illness. Study design: In a randomized, double-blind trial, previously well infants were randomized upon discharge from the emergency department to receive either albuterol (0.1 mg/kg/dose) three times per day or placebo three times per day for 7 days. Daily standardized telephone interviews were conducted for as long as 14 days. The primary outcome was the time to resolution of illness. Secondary outcomes included time to normal feeding, normal sleeping, quiet breathing, resolved cough, and coryza. Results: We studied 129 infants (albuterol, n = 64; placebo, n = 65). Baseline characteristics were similar between groups. The overall mean age was 5.3 months, 60\% were male, and 49 of 61 tested infants were positive for respiratory syncytial virus. The median (95\% confidence interval) time to resolution of illness (days) was similar: albuterol, 9.0 (8-13); placebo, 8.0 (7-9); P = .3) (log-rank test). There were no significant group differences in any secondary outcome. Health care revisit and admission rates were similar between groups. Conclusions: No significant group differences in either primary or secondary outcomes in infants treated with oral albuterol versus placebo were found. The widespread use of oral albuterol in this patient group is not recommended.},
    author = {Hema Patel and Serge Gouin and Robert W. Platt},
@@ -70,6 +67,14 @@
    url = {https://pubmed.ncbi.nlm.nih.gov/12756382/},
    year = {2003},
 }
+
+@report{Laborde2004,
+   abstract = {este artículo pretende mostrar que es la saturación de oxígeno, que información representa para la realización de un diagnóstico médico, el principio de funcionamiento de los sensores no invasivos por medios ópticos, y su uso en los centros de tratamiento intensivo (CTI). Index Terms-saturometría, saturación de oxígeno, presión parcial, sensor, arteria, hemoglobina, led, fotodiodo, fototransis-tor, CTI. I. INTRODUCCIÓN Es importante tanto en el tratamiento por oxigenoterapia como en la evaluación de los signos vitales de un paciente, determinar la calidad de la función respiratoria y el transporte del oxígeno en sangre hacia los tejidos. Un parámetro que se utiliza en este sentido es la saturación de oxígeno, quien expresa la cantidad oxígeno que se combina, en el sentido químico, con la hemoglobina para formar la oxihemoglobina, que es quien transporta el oxígeno en sangre hacia los tejidos. Al medir la saturación de oxígeno estamos midiendo la cantidad de oxígeno que se encuentra combinado con la hemoglobina, es por eso que esta medida es una medida relativa y no absoluta ya que no indica la cantidad de oxígeno en sangre que llega a los tejidos, sino, que relación hay entre la cantidad de hemoglobina presente y la cantidad de hemoglobina combinada con oxigeno (oxihemoglobina). Este parámetro se puede, y usualmente se hace, sensar opti-camente, dado que la cantidad de oxihemoglobina esta rela-cionada con la coloracion roja de la sangre, siendo esta más fuerte cuanto más oxihemoglobina contiene la sangre y mas tenue cuanto menos oxihemoglobina hay presente. II. TEORÍA Una pregunta que el médico se debe responder muchas veces frente a un paciente es cuanto oxígeno hay en sangre y si la cantidad es adecuada. Existen varios parámetros a tener en cuenta para este diagnóstico. Estos son, el gradiente de presión alveolar-arterial de oxígeno (P AO 2), la presión arterial de oxígeno (P aO 2), y la saturación de oxígeno (SaO 2). De estos tres el que menos información proporciona es la P aO 2 , siendo de todas maneras un parámetro no a cargo de la asignatura: Ing. Franco Simmini despreciable, ya que un valor normal de este gradiente implica una correcta difusión del oxígeno a la sangre, correspondiendo un alto valor de gradiente a una mala difusión del mismo. La presión parcial arterial de oxígeno es la presión de las moléculas libres disueltas en sangre que no se encuentran combinadas con la hemoglobina (Hb), razón por la cual este parámetro no es de gran información, además, bajo ciertas condiciones de intercambio gaseoso, la SaO 2 y la P aO 2 están relacionadas por la curva de disociación del oxíeno que se encuentra en la figura 1. Fig. 1. Curva de disociación del oxígeno Fuente: [6] Cada molécula de hemoglobina tiene cuatro enlaces disponibles a realizar con el oxígeno, el porcentaje de estos enlaces disponibles y los que verdaderamente se encuentran combinados con moléculas de oxígeno es lo que se denomina saturación de oxihemoglobina (SaO 2 cuando es medida en sangre arterial, lo que los equipos comerciales realmente miden se denomina SpO 2 porque se mide en la periferia del cuerpo humano, por ej. el dedo o el lóbulo de la oreja). Para conocer la cantidad de oxígeno total en sangre no basta con conocer la P aO 2 ni la SaO 2 , es necesario conocer el contenido de hemoglobina en sangre. Con este nuevo parámetro y con la ecuación del contenido de oxígeno, que no será detallada en este artículo, se puede calcular el mismo,},
+   author = {Manuel Laborde},
+   title = {Medida de la Saturación de Oxígeno por Medio Optico},
+   year = {2004},
+}
+
 
 @article{Daverio2019,
    abstract = {Aim: We aimed to describe the characteristics and outcomes of infants with bronchiolitis who received high-flow nasal cannula oxygen (HFNC) following a two-tiered approach. Methods: This retrospective study included 211 infants below 12 months of age needing oxygen therapy for bronchiolitis, between 2012 and 2017, on the general paediatric ward of the tertiary Paediatric Hospital of Padova, Italy. HFNC was used as first-line therapy for moderate to severe disease and as rescue therapy for deterioration on low-flow oxygen. Results: Median age was 61 days (IQR 31–126),},
