--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -15,7 +15,7 @@ Es importante destacar que no todos los casos de bronquiolitis conducen a insufi
 La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues consituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda. (\cite{Daverio2019})
 
 
-\subsection{Background and literature review}
+\subsection{Oxigenoterapia de alto flujo en los servicios de pediatría} 
 
 En los años recientes se ha incrementado el uso de la OAF en los pacientes con insuficiencia respiratoria aguda. Esta fue inicialmente introducida en la práctica clínica pero su uso se limitó a la población neonatal. La oxigenoterapia de alto flujo permite administrar un flujo de gas totalmente acondicionado hasta a 60L/min mediante cánulas nasales, obteniendo una rápida mejoría de los síntomas debido a diferentes mecanismos como, por ejemplo, una reducción de la resistencia de la vía aérea superior, cambios en el volumen circulante y la generación de cierto grado de presión positiva. Además, todo ello se consigue junto con una mejor tolerancia y comodidad por parte del paciente. (\cite{Masclans2015})
 
@@ -23,17 +23,16 @@ En los últimos años, la OAF se ha utilizado cada vez más en niños mayores y 
 
 En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\cite{Lodeserto2018}) hace referencia al estudio de 10 pacientes los cuales muestran insuficiencia cardíaca de tipo III y cómo aquellos se benefician de esta terapia. Además también se menciona la ayuda que puede suponer para los pacientes con Enfermedad Pulmonar Obstructiva Crónica (EPOC) y falla respiratoria aguda. Sin embargo, es importante tener en cuenta que cada paciente es único y debe ser evaluado individualmente para determinar si la terapia con cánula nasal de alto flujo es adecuada para ellos.
 
-Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCI pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón. 
-
-Por otro lado existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado que son de utilidad en el ámbito de cuidados intermedios de neonatología para prever el ingreso de los pacientes en cuidados intensivos neonatales. (\cite{Solis2022})
-
-Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización. (\cite{AmandaC}) 
-
-\subsection{Motivation for the research}
-
-\subsection{Significance of the Study}
+Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCI pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón.
 
 
-\subsection{Outline of the thesis}
+\subsection{Motivación del estudio}
+
+Existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado que son de utilidad en el ámbito de cuidados intermedios de neonatología para prever el ingreso de los pacientes en cuidados intensivos neonatales. (\cite{Solis2022})
+
+Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización. (\cite{AmandaC})
+
+En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico,con la hemoglobina para formar la oxihemoglobina,que es quien transporta el oxígeno en sangre hacia los tejidos. (\cite{Laborde2004}) La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
+
 
 
