--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,4 +1,4 @@
-\section{INTRODUCTION} \label{sec:itroduction}
+\section{INTRODUCCIÓN}\label{sec:introduction}
 
 En esta sección del trabajo se van a explicar y definir los conceptos básicos en relación al contexto del trabajo que se van a utilizar a lo largo del mismo. Además, se va a realizar una revisión bibliográfica de los temas que se van a tratar.
 
@@ -33,6 +33,26 @@ Existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas d
 Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización. (\cite{AmandaC})
 
 En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico,con la hemoglobina para formar la oxihemoglobina,que es quien transporta el oxígeno en sangre hacia los tejidos. (\cite{Laborde2004}) La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
+
+
+\subsection{Aprendizaje Automático en el ámbito de la salud}
+
+El aprendizaje automático (AA) es una rama de la inteligencia artificial que se centra en el estudio y construcción de sistemas capaces de aprender de los datos, identificar patrones y tomar decisiones con mínima intervención humana. En los últimos años el AA ha demostrado ser una herramienta poderosa y útil dentro del ámbito de la salud. Con la creciente disponibilidad de datos de salud electrónicos y la mejora de la potencia informática, el AA ha encontrado muchas formas de mejorar el diagnóstico, el pronóstico y el tratamiento de enfermedades, así como el sistema de salud en general. Por esta razón esta herramienta es utilizada en varios sistemas dentro del ámbito de la salud. El AA se puede dividir en dos categorías principales: aprendizaje supervisado y aprendizaje no supervisado.
+
+\begin{itemize}
+    \item El aprendizaje supervisado se refiere a un conjunto de algoritmos que pueden aplicarse a un conjunto de datos etiquetados. 
+    \item El aprendizaje no supervisado se refiere a un conjunto de algoritmos que pueden aplicarse a un conjunto de datos no etiquetados.
+\end{itemize}
+
+En el presente trabajo se utilizaran ambas disciplinas.
+
+
+
+
+
+
+
+
 
 
 
