--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -1,7 +1,10 @@
-\section{METHODOLOGY}\label{sec:methodology}
+\section{METODOLOGIA}\label{sec:methodology}
 
-In this chapter, we describe the methodology we used to achieve our research objectives. We begin by discussing the research design and data collection methods we employed to gather information on heart rate variability in infants with heart disease. We then outline our approach to data preprocessing, including data cleaning and feature selection. Finally, we describe the machine learning algorithms we used to classify the temporal series data and the performance metrics we used to evaluate the models. Depending on the specifics of your research, you may want to include a section on data collection and preprocessing, as well as any ethical considerations you had to take into account.
+En este capítulo, se describirá la metodología utilizada para conseguir cumplir los objetivos establecidos. 
 
+Se comenzará por discutir el diseño de la investigación y los métodos de recolección de datos que han sido utilizados para recopilar información. Luego se describirá el enfoque aportado para el preprocesamiento de datos, incluida la limpieza de datos y la selección de características.
+
+Finalmente, se describirán los algoritmos de aprendizaje automático utilizados para el estudio y clasificación de pacientes. 
 
 \subsection{Research design}
 
