--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -2,7 +2,7 @@
 
 En esta sección del trabajo se van a explicar y definir los conceptos básicos en relación al contexto del trabajo que se van a utilizar a lo largo del mismo. Además, se va a realizar una revisión bibliográfica de los temas que se van a tratar.
 
-\subsection{Bronquiolitis, insuficiencia respiratoria aguda y oxigenoterapia de alto flujo}
+\subsection{Bronquiolitis, Insuficiencia Respiratoria Aguda y Oxigenoterapia de Alto Flujo}
 
 La bronquiolitis (BR), una infección de las vías respiratorias inferiores causada principalmente por el virus respiratorio sincitial (VRS) y puede convertirse en una enfermedad muy grave. En algunos casos es necesaria la la hospitalización 10 \% de los casos, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad.(\cite{Fainardi2021}) La dificultad respiratoria que caracteriza y condiciona la gravedad del cuadro, alcanza su máxima expresividad transcurridos los primeros 3-5 días de evolución de la enfermedad, y es la causa principal de ingreso hospitalario. (\cite{Patel2003})
 
@@ -15,7 +15,7 @@ Es importante destacar que no todos los casos de bronquiolitis conducen a insufi
 La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues consituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda. (\cite{Daverio2019})
 
 
-\subsection{Oxigenoterapia de alto flujo en los servicios de pediatría} 
+\subsection{Oxigenoterapia de Alto Flujo en los Servicios de Pediatría} 
 
 En los años recientes se ha incrementado el uso de la OAF en los pacientes con insuficiencia respiratoria aguda. Esta fue inicialmente introducida en la práctica clínica pero su uso se limitó a la población neonatal. La oxigenoterapia de alto flujo permite administrar un flujo de gas totalmente acondicionado hasta a 60L/min mediante cánulas nasales, obteniendo una rápida mejoría de los síntomas debido a diferentes mecanismos como, por ejemplo, una reducción de la resistencia de la vía aérea superior, cambios en el volumen circulante y la generación de cierto grado de presión positiva. Además, todo ello se consigue junto con una mejor tolerancia y comodidad por parte del paciente. (\cite{Masclans2015})
 
@@ -35,7 +35,7 @@ Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental 
 En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico,con la hemoglobina para formar la oxihemoglobina,que es quien transporta el oxígeno en sangre hacia los tejidos. (\cite{Laborde2004}) La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
 
 
-\subsection{Aprendizaje Automático en el ámbito de la salud}
+\subsection{Aprendizaje Automático en el Ámbito de la Salud}
 
 El aprendizaje automático (AA) es una rama de la inteligencia artificial que se centra en el estudio y construcción de sistemas capaces de aprender de los datos, identificar patrones y tomar decisiones con mínima intervención humana. En los últimos años el AA ha demostrado ser una herramienta poderosa y útil dentro del ámbito de la salud. Con la creciente disponibilidad de datos de salud electrónicos y la mejora de la potencia informática, el AA ha encontrado muchas formas de mejorar el diagnóstico, el pronóstico y el tratamiento de enfermedades, así como el sistema de salud en general. Por esta razón esta herramienta es utilizada en varios sistemas dentro del ámbito de la salud. El AA se puede dividir en dos categorías principales: aprendizaje supervisado y aprendizaje no supervisado.
 
