--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
 \usepackage{wrapfig} % Para posicionar imágenes alrededor del texto.
 \usepackage{fontawesome5} % Para utilizar iconos de "fontawesome".
 \usepackage{pdflscape}  % Para colocar páginas en formato apaisado.
+\usepackage{array} % Para centrar verticalmente el contenido de las celdas de una tabla.
 % ---------------------------------------------- %
 
 
